--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   position: absolute;
   top: 16px;
   left: 13%;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -55,6 +56,7 @@
   background-size: cover;
   background-position: center;
   padding: 200px 0 400px 0;
+  position: relative;
 }
 
 .intro h1 {
@@ -71,4 +73,41 @@
   font-weight: 500;
   font-size: 18px;
   padding: 11px 48px;
+}
+
+.intro__blocks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 21px;
+  position: absolute;
+  left: 16%;
+  bottom: -10%;
+}
+
+.intro__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+  padding: 39px 48px 37px 39px;
+  min-width: 386px;
+}
+
+.intro_block p {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.intro__block span {
+  font-weight: 400;
+  font-size: 18px;
+  color: rgba(183, 183, 183, 1);
+}
+
+.intro__block img {
+  width: 30px;
+  height: 30px;
 }
