--- a/style.css
+++ b/style.css
@@ -111,3 +111,57 @@
   width: 30px;
   height: 30px;
 }
+
+.services {
+  text-transform: uppercase;
+  margin: 199px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.services h2 {
+  font-weight: 700;
+  font-size: 30px;
+}
+
+.services a {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.services__blocks {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  justify-content: space-between;
+}
+
+.services__block {
+  position: relative;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  width: 100%;
+  height: 90%;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.services__block:hover .overlay {
+  display: block;
+}
+
+.services__block:hover::before {
+  content: url(./assets/images/plus.png);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100px;
+  height: 100px;
+  transform: translate(-50%, -50%);
+}
