--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@
   font-weight: 500;
   font-size: 18px;
   padding: 11px 48px;
+  border: none;
 }
 
 .intro__blocks {
@@ -142,11 +143,16 @@
   position: relative;
 }
 
+.services__block p {
+  font-weight: 600;
+  font-size: 20px;
+}
+
 .overlay {
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   width: 100%;
-  height: 90%;
+  height: 93%;
   top: 0;
   left: 0;
   display: none;
@@ -164,4 +170,171 @@
   width: 100px;
   height: 100px;
   transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.services__block:hover::after {
+  content: "ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH";
+  position: absolute;
+  top: 65%;
+  left: 10%;
+  width: 55%;
+  height: auto;
+  z-index: 2;
+  color: white;
+}
+
+.auto {
+  background-color: rgba(23, 22, 22, 1);
+}
+
+.auto__inner {
+  padding: 100px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 130px;
+  align-items: center;
+}
+
+.auto__inner__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.auto__inner__content h2 {
+  font-weight: 700;
+  font-size: 30px;
+  width: 70%;
+  color: white;
+}
+
+.auto__inner__content p {
+  font-weight: 600;
+  font-size: 15px;
+  width: 63%;
+  color: white;
+}
+
+.auto__inner__content a {
+  font-weight: 500;
+  font-size: 18px;
+  color: white;
+}
+
+.process {
+  margin: 60px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.process h1 {
+  font-weight: 900;
+  font-size: 148px;
+}
+
+.process .process__text {
+  font-weight: 600;
+  font-size: 40px;
+  margin-bottom: 60px;
+}
+
+.process__blocks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.process__block {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+  min-width: 386px;
+  gap: 15px;
+  padding: 25px 20px;
+}
+
+.process__block h3 {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.process__block p {
+  font-weight: 400;
+  font-size: 18px;
+  color: rgba(183, 183, 183, 1);
+  width: 90%;
+}
+
+.contact {
+  background-color: rgba(23, 22, 22, 1);
+}
+
+.contact__inner {
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.contact__inner h1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 30px;
+  color: rgba(255, 255, 255, 1);
+}
+
+.contact__inner-input {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.contact__inner-list {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+}
+
+.contact__inner input {
+  background-color: transparent;
+  border-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 1);
+}
+
+.contact__inner input::placeholder {
+  color: white;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.contact__inner textarea {
+  background-color: transparent;
+  border-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 1);
+  max-width: 440px;
+  min-height: 131px;
+}
+
+.contact__inner textarea::placeholder {
+  color: white;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.contact__inner button {
+  background-color: rgba(219, 37, 18, 1);
+  color: rgba(255, 255, 255, 1);
+  border: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 18px;
+  width: 187px;
+  height: 50px;
 }
